--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/BeermecumTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,8 +21,12 @@
         </activity>
 
         <provider
-            android:authorities="app.beermecum.com.beermecum"
-            android:name=".data.BeerProvider" />
+            android:name=".data.BeerProvider"
+            android:authorities="app.beermecum.com.beermecum" />
+
+        <activity
+            android:name=".DetailActivity"
+            android:label="@string/title_activity_detail"></activity>
     </application>
 
 </manifest>
